Imprimir mapa con localización del usuario

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,8 @@
     <title>Glotones somos | Y en el camino andamos</title>
   </head>
   <body>
-    <div id="drawMaps"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlqVK0s1CuwsYm1fy6ezK6zk-9CayW44s&callback=initMap"
-        async defer></script>
-    <script src="js/locating.js"></script>
-    <script src="js/main.js"></script>
+    <button type="button" name="button" id = "findUser">Localizar</button>
+    <div id="mapLocations"></div>
+    <script src="js/app.js"></script>
   </body>
 </html>
