Resolviendo duplicidad de mapas por medio de archivos instalables

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
       <script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
       <script type="text/javascript" src="js/firebaseCredentials.js"></script>
