--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Buscador de lugares para comer, encuentra restaurantes cerca de ti.">
     <meta name="keywords" content="Geolocalizador, comida, restaurantes, hambre, platillos">
-    <link href="//fonts.googleapis.com/css?family=Dancing+Script|Dosis|Kalam|Lobster|Modern+Antiqua|Pacifico|Permanent+Marker|Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Dosis|Kalam|Lobster|Modern+Antiqua|Pacifico|Permanent+Marker|Playfair+Display" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
       crossorigin="anonymous">
-    <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 
     <!--<link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css" />-->
     <title>Glotones somos | Y en el camino andamos</title>
@@ -46,13 +46,13 @@
     </div>
 <!--Zona de scripts-->
       <!--<script src="//yocelingr.github.io/cdmx-2018-06-bc-core-pm-foodmap/src/js/main.js"></script>-->
-      <script src="//code.jquery.com/jquery-3.3.1.min.js"
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-      <script src="//unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-      <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
       <!--<script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>-->
-      <script src="//www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
       <script type="text/javascript" src="js/firebaseCredentials.js"></script>
       <script type="text/javascript" src="js/main.js"></script>
   </body>
