--- a/src/index.html
+++ b/src/index.html
@@ -1,59 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <title>Glotones somos | Y en el camino andamos</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Buscador de lugares para comer, encuentra restaurantes cerca de ti.">
     <meta name="keywords" content="Geolocalizador, comida, restaurantes, hambre, platillos">
+
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Dosis|Kalam|Lobster|Modern+Antiqua|Pacifico|Permanent+Marker|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
-      crossorigin="anonymous">
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-
-    <!--<link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css" />-->
-    <title>Glotones somos | Y en el camino andamos</title>
-    <!-- Quita atribucion de derechos de los mapas-->
-    <style media="screen">
-      .leaflet-control-attribution{
-        display: none;
-      }
-    </style>
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
   </head>
   <body>
-    <div id="mapaSpace" style="width: 600px; height: 400px; float: left;"></div>
-    <div>
-      <section>
-        <h2>Filtros</h2>
-        <h4>Evaluación</h4>
-        <select id="select-rate" onchange="showRate()">
-          <option value="bueno">Bueno</option>
-          <option value="excelente">Excelente</option>
-        </select>
-      </section>
-      <h4>Precio:</h4>
-      <select id = "select-price" onchange="showPrice()">
-        <option value="cien">Menor o igual a $100</option>
-        <option value="doscientos">Entre $200 y $400</option>
-        <option value="cuatrocientos">Mayor a $400</option>
-      </select>
-      <h4>Tipo</h4>
-      <select id="select-type" onchange="showType()">
-        <option value="mexicana">Mexicana</option>
-        <option value="otro">Otros</option>
-      </select>
-    </section>
-    <button type="button" name="button" onclick="filter()">Filtrar</button>
+    <div class="container">
+      <div class="row">
+        <div class="col s8 m6 l6 xl6 ">
+          <h1>Glotones somos</h1>
+          <h3>...</h3>
+          <h4>y en el camino andamos</h4>
+        </div>
+      </div>
     </div>
-<!--Zona de scripts-->
-      <!--<script src="//yocelingr.github.io/cdmx-2018-06-bc-core-pm-foodmap/src/js/main.js"></script>-->
-      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
-      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.2/leaflet.js"></script>
-      <!--<script type="text/javascript" src="node_modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>-->
-      <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
-      <script type="text/javascript" src="js/firebaseCredentials.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
+    <div class="container">
+        <div class="row">
+          <div class="col s8 m6 l6 xl6 ">
+            <img src="images/error.gif" alt="Glotones somos">
+          </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        const timeout = () => {
+        window.setTimeout("redirect()",6000)
+        }
+        const redirect = () => {
+        window.location="html/home.html"
+        return
+       }
+        window.onload = timeout();
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   </body>
 </html>
