Agregando modales y filtrado

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -5,44 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Buscador de lugares para comer, encuentra restaurantes cerca de ti.">
     <meta name="keywords" content="Geolocalizador, comida, restaurantes, hambre, platillos">
+
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Dosis|Kalam|Lobster|Modern+Antiqua|Pacifico|Permanent+Marker|Playfair+Display" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
-      crossorigin="anonymous">
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../css/home.css"/>
     <title>Glotones somos | Y en el camino andamos</title>
   </head>
   <body>
-    <div id="mapaSpace" style="width: 600px; height: 400px; float: left;"></div>
-    <div>
-      <section>
-        <h2>Filtros</h2>
-        <h4>Evaluación</h4>
-        <select id="select-rate" onchange="showRate()">
-          <option value="bueno">Bueno</option>
-          <option value="excelente">Excelente</option>
-        </select>
-      </section>
-      <h4>Precio:</h4>
-      <select id = "select-price" onchange="showPrice()">
-        <option value="cien">Menor o igual a $100</option>
-        <option value="doscientos">Entre $200 y $400</option>
-        <option value="cuatrocientos">Mayor a $400</option>
-      </select>
-      <h4>Tipo</h4>
-      <select id="select-type" onchange="showType()">
-        <option value="mexicana">Mexicana</option>
-        <option value="otro">Otros</option>
-      </select>
-    </section>
-    <button type="button" name="button" onclick="filter()">Filtrar</button>
+    <div class="container">
+      <div class="row">
+        <div class = "col s6 m6 l6">
+          <h1>Glotones somos</h1>
+          <h2> ... </h2>
+          <h3> y en el camino andamos</h3>
+          <h4>Restaurantes</h4>
+          <h6>Busca Restaurantes por: </h6>
+        </div>
+      </div>
     </div>
-<!--Zona de scripts-->
-      <!--<script src="//yocelingr.github.io/cdmx-2018-06-bc-core-pm-foodmap/src/js/main.js"></script>-->
+    <div class="container">
+      <div class="row">
+        <div class = "col s6 m6 l6 center-align">
+          <button class="btn waves-effect waves-light" type="button" name="name" id = "getResByName">Nombre</button>
+          <button class="btn waves-effect waves-light" type="button" name="category" id = "getResByCategory">Categoria</button>
+          <button class="btn waves-effect waves-light" type="button" name="price" id = "getResByPrice">Precio</button>
+          <button class="btn waves-effect waves-light" type="button" name="rate" id = "getResByRate">Recomendación</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div id="showRestaurantes" class = "col s6 m6 l6">
+        </div>
+      </div>
+    </div>
+      <!--Zona de scripts-->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-      <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
-      <script type="text/javascript" src="js/firebaseCredentials.js"></script>
-      <script type="text/javascript" src="js/main.js"></script>
+      <script type="text/javascript" src="../js/main.js"></script>
   </body>
 </html>
