--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col s8 m6 l6 xl6 ">
+        <div class="col s8 m6 l6 xl6 center-align">
           <h1>Glotones somos</h1>
           <h3>...</h3>
           <h4>y en el camino andamos</h4>
@@ -26,7 +26,7 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col s8 m6 l6 xl6 ">
+          <div class="col s8 m6 l6 xl6 center-align">
             <img src="images/error.gif" alt="Glotones somos">
           </div>
         </div>
